Added petitionsController. Now petitions logic is separated from users except obtaining all the petitions of an user
